--- a/views/about.html
+++ b/views/about.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="APP Caranya My Id, Web Aplikasi Yang Berguna Untuk 1000 Umat" />
-    <meta name="author" content="Dappa" />
+    <meta name="author" content="Ardyy" />
     <meta content='#007FFF' name='theme-color'/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <base target="_blank"/>
-    <title>About Me - DapX API</title>
+    <title>About Me - Apx7 API</title>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Poppins');
       *{
@@ -20,7 +20,7 @@
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow mb-3">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="/">DapX API</a>
+      <a class="navbar-brand fw-bold" href="/">Apx7 API</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,9 +41,9 @@
       <h2 class="card-header shadow-sm bg-primary text-white">About Me</h2>
       <div class="card-body">
       <div class="text-center">
-        <img src="https://avatars.githubusercontent.com/dappauhuy" class="rounded-circle shadow mb-3" alt="DappaUhuy" width="150px" height="150px">
+        <img src="https://avatars.githubusercontent.com/appocalyp" class="rounded-circle shadow mb-3" alt="appocalyp" width="150px" height="150px">
       </div>
-        <p class="card-text text-shadow">Web API ini Dibuat Oleh DappaUhuy Menggunakan HTML/CSS/JavaScript/dll.<br/Jangan Lupa Subscribe DappaUhuy<br/>Mau Tanya Tanya? https://wa.me/6285876330812<br/>Apikey : dappabotwa<br/><br/>Terimakasih.</p>
+        <p class="card-text text-shadow">Web API ini Dibuat Oleh Ardyy Menggunakan HTML/CSS/JavaScript/dll.<br/Jangan Lupa Subscribe Apx7-BOT<br/>Mau Tanya Tanya? https://wa.me/6281344309802<br/>Apikey : Chat me on WA<br/><br/>Terimakasih.</p>
       </div>
     </div>
   </div>
