--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Rest API - DapX</title>
+  <title>Rest API Apx7</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@ window['CboxReady'] = function (Cbox) {
         <div class="sidebar-brand-icon">
         	<img src="img/logo/logo2.png">
         </div>
-        <div class="sidebar-brand-text mx-3">DapX API</div>
+        <div class="sidebar-brand-text mx-3">Apx7 API</div>
       </a>
       <hr class="sidebar-divider my-0">
       <li class="nav-item active">
@@ -204,25 +204,25 @@ window['CboxReady'] = function (Cbox) {
       </li>
       <li class="nav-item">
           
-            <a class="nav-link collapsed" href="https://wa.me/6285876330812">
+            <a class="nav-link collapsed" href="https://wa.me/6281344309802">
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://github.com/dappauhuy">
+            <a class="nav-link collapsed" href="https://github.com/appocalyp">
             <i class="fab fa-fw fa-github"></i>
                     <span>Github</span>
             </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link collapsed" href="https://instagram.com/scytfdhd._">
+            <a class="nav-link collapsed" href="https://instagram.com/ff.ardych">
             <i class="fab fa-fw fa-instagram"></i>
                     <span>Instagram</span>
             </a>
       </li>
       <hr class="sidebar-divider">
-      <div class="version"><b>Made With ♥️ By DappaUhuy</b></div>
+      <div class="version"><b>Made With ♥️ By Ardyy</b></div>
     </ul>
     <!-- Sidebar -->
     <div id="content-wrapper" class="d-flex flex-column">
@@ -380,7 +380,7 @@ window['CboxReady'] = function (Cbox) {
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-uppercase mb-1">Info Developer</div>
                       <br>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">DappaUhuy</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800">Apx7</div>
                       <div class="mt-2 mb-0 text-muted text-xs">
                         <span class="text-success mr-2"> 13. y.o Programmer</span>
                       </div>
@@ -449,7 +449,7 @@ window['CboxReady'] = function (Cbox) {
 
           <div class="row">
             <div class="col-lg-12 text-center">
-              <p>Suka Dengan API Nya ? Boleh Dong, Follow Github Gw : <a href="https://github.com/dappauhuy"
+              <p>Suka Dengan API Nya ? Boleh Dong, Follow Github Gw : <a href="https://github.com/appocalyp"
                   class="btn btn-primary btn-sm" target="_blank"><i class="fab fa-fw fa-github"></i>&nbsp;GitHub</a></p>
             </div>
           </div>
@@ -462,7 +462,7 @@ window['CboxReady'] = function (Cbox) {
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
             <span>Copyright &copy; 2021 - Developed By
-              <b><a href="https://github.com/dappauhuy" target="_blank">DappaUhuy</a></b>
+              <b><a href="https://github.com/appocalyp" target="_blank">Apx7</a></b>
             </span>
           </div>
         </div>
