--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@ window['CboxReady'] = function (Cbox) {
     <ul class="navbar-nav sidebar sidebar-light accordion" id="accordionSidebar">
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon">
-        	<img src="img/logo/logo2.png">
+        	<img src="img/logo/OYup83dCeBUEuu47_1fZ3Q_r.jpg">
         </div>
         <div class="sidebar-brand-text mx-3">Apx7 API</div>
       </a>
@@ -125,12 +125,12 @@ window['CboxReady'] = function (Cbox) {
             <a class="collapse-item" href="api/textmaker?text=halo&text2=hai&text3=gwganteng&theme=google-suggestion&apikey=MASUKIN_APIKEY">Google Suggestion</a>
             <a class="collapse-item" href="api/textmaker/game?text=halo&text2=hai&theme=pubg&apikey=MASUKIN_APIKEY">PUBG</a>
             <a class="collapse-item" href="api/textmaker/game?text=halo&text2=hai&theme=battlefield&apikey=MASUKIN_APIKEY">BattleField</a>
-            <a class="collapse-item" href="api/textmaker/senja?text=Dappa&theme=coffee-cup&apikey=MASUKIN_APIKEY">Coffee Cup</a>
-            <a class="collapse-item" href="api/textmaker/senja?text=Dappa&theme=coffee-cup2&apikey=MASUKIN_APIKEY">Coffee Cup 2</a>
-            <a class="collapse-item" href="api/textmaker/metallic?text=Dappa&theme=neon&apikey=MASUKIN_APIKEY">Neon</a>
-            <a class="collapse-item" href="api/textmaker/metallic?text=Dappa&theme=glow&apikey=MASUKIN_APIKEY">Glow</a>
-            <a class="collapse-item" href="api/textmaker/alam?text=Dappa&theme=summer&apikey=MASUKIN_APIKEY">Summer</a>
-            <a class="collapse-item" href="api/textmaker/alam?text=Dappa&theme=flower&apikey=MASUKIN_APIKEY">Flower</a>
+            <a class="collapse-item" href="api/textmaker/senja?text=ardyy&theme=coffee-cup&apikey=MASUKIN_APIKEY">Coffee Cup</a>
+            <a class="collapse-item" href="api/textmaker/senja?text=ardyy&theme=coffee-cup2&apikey=MASUKIN_APIKEY">Coffee Cup 2</a>
+            <a class="collapse-item" href="api/textmaker/metallic?text=ardyy&theme=neon&apikey=MASUKIN_APIKEY">Neon</a>
+            <a class="collapse-item" href="api/textmaker/metallic?text=ardyy&theme=glow&apikey=MASUKIN_APIKEY">Glow</a>
+            <a class="collapse-item" href="api/textmaker/alam?text=ardyy&theme=summer&apikey=MASUKIN_APIKEY">Summer</a>
+            <a class="collapse-item" href="api/textmaker/alam?text=ardyy&theme=flower&apikey=MASUKIN_APIKEY">Flower</a>
           </div>
         </div>
       </li>
@@ -171,8 +171,8 @@ window['CboxReady'] = function (Cbox) {
         <div id="collapseother" class="collapse" aria-labelledby="headingother" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Other Menu</h6>
-            <a class="collapse-item" href="api/nulis?text=DappaGanteng&apikey=MASUKAN_APIKEY">Nulis Buku</a>
-            <a class="collapse-item" href="api/infonpm?query=dappa-api&hostname=dappa&apikey=MASUKAN_APIKEY">Info NPM</a>
+            <a class="collapse-item" href="api/nulis?text=ardyyGanteng&apikey=MASUKAN_APIKEY">Nulis Buku</a>
+            <a class="collapse-item" href="api/infonpm?query=apx7-api&hostname=ardyy&apikey=MASUKAN_APIKEY">Info NPM</a>
             <a class="collapse-item" href="api/infogempa?apikey=MASUKAN_APIKEY">Info Gempa</a>
             <a class="collapse-item" href="api/cuaca?kabupaten=kab bungo&apikey=MASUKAN_APIKEY">Info Cuaca</a>
             <a class="collapse-item" href="api/covidindo?apikey=MASUKAN_APIKEY">Covid Indo</a>
