--- a/views/about.html
+++ b/views/about.html
@@ -43,10 +43,19 @@
       <div class="text-center">
         <img src="https://avatars.githubusercontent.com/appocalyp" class="rounded-circle shadow mb-3" alt="appocalyp" width="150px" height="150px">
       </div>
-        <p class="card-text text-shadow">Web API ini Dibuat Oleh Ardyy Menggunakan HTML/CSS/JavaScript/dll.<br/Jangan Lupa Subscribe Apx7-BOT<br/>Mau Tanya Tanya? https://wa.me/6281344309802?text=Bang+minta+apikey:v<br/>Apikey : Chat me on WA<br/><a class="nav-link collapsed" href="https://wa.me/6281344309802">
+        <p class="card-text text-shadow">Web API ini Dibuat Oleh Ardyy Menggunakan HTML/CSS/JavaScript/dll.<br/Jangan Lupa Subscribe Apx7-BOT<br/>Mau Tanya Tanya? <li class="nav-item">
+          
+            <a class="nav-link collapsed" href="https://wa.me/6281344309802?text=Bang+mau+nanya:v">
             <i class="fab fa-fw fa-whatsapp"></i>
                     <span>WhatsApp</span>
-            </a><br/>Terimakasih.</p>
+            </a>
+      </li><br/>Apikey : Chat me on WA<br/><li class="nav-item">
+          
+            <a class="nav-link collapsed" href="https://wa.me/6281344309802?text=Bang+minta+apikey:v">
+            <i class="fab fa-fw fa-whatsapp"></i>
+                    <span>WhatsApp</span>
+            </a>
+      </li><br/>Terimakasih.</p>
       </div>
     </div>
   </div>
