--- a/views/index.html
+++ b/views/index.html
@@ -106,6 +106,19 @@
             <a class="collapse-item" href="api/random/wallpaper?apikey=MASUKIN_APIKEY">Wallpaper</a>
           </div>
         </div>
+       </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseText" aria-expanded="true"
+          aria-controls="collapseText">
+          <i class="fas fa-fw fa-table"></i>
+          <span>Ephoto 360 API</span>
+        </a>
+        <div id="collapseText" class="collapse" aria-labelledby="headingText" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Ephoto 360 API</h6>
+            <a class="collapse-item" href="api/textmaker/ephoto?text=halo&text2=hai&theme=graffiti&apikey=MASUKIN_APIKEY">Graffiti</a>
+            </div>
+        </div>
       </li>
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseText" aria-expanded="true"
