--- a/views/index.html
+++ b/views/index.html
@@ -141,6 +141,7 @@
             <a class="collapse-item" href="api/textmaker/metallic?text=ardyy&theme=glow&apikey=MASUKIN_APIKEY">Glow</a>
             <a class="collapse-item" href="api/textmaker/alam?text=ardyy&theme=summer&apikey=MASUKIN_APIKEY">Summer</a>
             <a class="collapse-item" href="api/textmaker/alam?text=ardyy&theme=flower&apikey=MASUKIN_APIKEY">Flower</a>
+            <a class="collapse-item" href="api/imgmanipulation/?url=MASUKIN_URL&apikey=MASUKIN_APIKEY">3D Lines Photo</a>
           </div>
         </div>
       </li>
