--- a/views/index.html
+++ b/views/index.html
@@ -141,7 +141,7 @@
             <a class="collapse-item" href="api/textmaker/metallic?text=ardyy&theme=glow&apikey=MASUKIN_APIKEY">Glow</a>
             <a class="collapse-item" href="api/textmaker/alam?text=ardyy&theme=summer&apikey=MASUKIN_APIKEY">Summer</a>
             <a class="collapse-item" href="api/textmaker/alam?text=ardyy&theme=flower&apikey=MASUKIN_APIKEY">Flower</a>
-            <a class="collapse-item" href="api/fps/?url=MASUKIN_URL&text1=hai&text2=halo&theme=fpsgame&apikey=MASUKIN_APIKEY">FPS Game Banner</a>
+            <a class="collapse-item" href="api/fps/?url=MASUKIN_URL_GAMBAR&text=TEXT_1&text2=TEXT_2&text3=banner&theme=fpsgame&apikey=MASUKIN_APIKEY">FPS Game Banner</a>
           </div>
         </div>
       </li>
